# markit-engine

./: .gitattributes  README.md  analyzer.py  app.py  pyproject.toml  requirements.txt  setup.sh  stocks.yaml
.github/: analyze.yml  ci.yml
.github/workflows/: analyze.yml
.streamlit/: config.toml
modules/: __init__.py  alerts.py  congress_trades.py  fundamentals.py  google_trends.py  hedge_funds.py  insider_trades.py  macro.py  news_rss.py  press_releases.py  prices.py  rag_agent.py  rag_utils.py  reddit.py  sustainability.py  technicals.py  wikipedia.py  world_news.py
scripts/: bootstrap_rag.py
tests/: test_alerts.py  test_analyzer.py  test_congress_trades.py  test_insider_trades.py  test_news_rss.py  test_press_releases.py  test_prices.py  test_rag_utils.py  test_reddit.py  test_sustainability.py
