[project]
name = "thesis-engine"
version = "1.0.0"
description = "AI-powered investment thesis monitor. 14 data layers, Claude synthesis, email alerts."
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E402",   # module level import not at top -- load_dotenv() must run before imports
    "E501",   # line too long -- handled by formatter where possible
    "E741",   # ambiguous variable name (we use l, f, etc. intentionally)
    "F841",   # local variable assigned but never used -- some are for clarity
]

[tool.pytest.ini_options]
testpaths = ["tests"]
